--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
         "@vitejs/plugin-vue": "^5.0.5",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "vue": "^3.4.31"
     }
 }
